# task-management-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  task_management.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_45dd768bbc66_task_table.py  0002_9967d05a075e_user_table.py
app/: main.py
app/db/: info.py  session.py
app/exceptions/: app_exceptions.py
app/models/: __init__.py  base.py  task.py  user.py
app/repositories/: base.py  task_repository.py  user_repository.py
app/routes/: __init__.py  authentication.py  errors_handler.py  status.py  task.py
app/schemas/: base.py  pagination.py  status.py  task.py  token.py  user.py
app/services/: authentication.py
app/settings/: __init__.py  config.py  logger_config.py  psql.py
tests/: .env.test  conftest.py
tests/test_integration/: conftest.py
tests/test_integration/test_repositories/: test_task.py
tests/test_integration/test_routes/: test_route_status.py  test_route_tasks.py
